<resources>
    <string name="app_name">Life</string>
    <string name="version" translatable="false">0.5</string>
    <string name="salam">Salam</string>
    <string name="action_settings">Settings</string>
    <string name="success">Success</string>
    <string name="errorconection">Connection error</string>
    <string name="errorproblem">A unknown problem happened</string>
    <string name="errorfunblock">First unblock this person.</string>
    <string name="errorblock">Sorry,This person has blocked you.</string>
    <string name="insertfeedback">Please insert your feedback.</string>
    <string name="takecamera">Take from camera</string>
    <string name="takegallery">Select from gallery</string>
    <string name="selectpic">Select Picture</string>
    <string name="uploadingstart">uploading started…</string>
    <string name="onback">Press once again to exit</string>
    <string name="Saoshyant_Group">Saoshyant</string>
    <string name="present">A present to God</string>
    <string name="name">Name</string>
    <string name="support">Support</string>
    <string name="subject">Subject</string>
    <string name="feedback">Feedback</string>
    <string name="policies">Policies</string>
    <string name="insertname">Congratulations:-) you are a new Life member.Please insert your name and your username.</string>
    <string name="login1txt">Please,Insert your Phone number.you will send us SMS</string>
    <string name="cyc">Select your Country</string>
    <string name="yuo">Your use of our services means that you accept our terms and policies</string>
    <string name="errorresivesms">We didn\'t receive your SMS.Please check your credit , phone number and try again </string>
    <string name="errorphone">please,Insert you\'r Ten-digit phone number.</string>
    <string name="errorsendsms">Your phone couldn\'t send SMS</string>
    <string name="onemin">Please wait a moment</string>
    <string name="errorUsername">Your username must be between five to twenty characters.</string>
    <string name="errorrname">Your name must be between five to twenty characters.</string>
    <string name="usernameAlreadyTaken">This username is already taken. choose a different username</string>
    <string name="exdate">This version of Life extinct. Download the new version. Thank you:-)</string>
    <string name="download">Download</string>
    <string name="donatetxt">ویو ابتدای نوآوری در شبکه های اجتماعیه برای اینکه بتونیم در این راه قدم برداریم نیازمند حمایت شماییم.شما با حمایت از ما از خلاقیت هم حمایت می کنید</string>
    <string name="donatebtn">Donate</string>
    <string name="search">Search</string>
    <string name="logout">Logout</string>
    <string name="logouterror">Do you really want to logout ?</string>
    <string name="reported">Reported</string>
    <string name="sayNew">Say New</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="insertpfn">Please select your name ,your username and your password</string>
    <string name="password">Password</string>
    <string name="errorpassword">Your password must be more than five  characters.</string>
    <string name="insertpf">Please insert your username and your password</string>
    <string name="errorlogin">The username or password is not correct</string>
    <string name="share">Share</string>
    <string name="insertText">What about your life?</string>
    <string name="slide_1_title">Say New !</string>
    <string name="slide_1_desc">The best way to hin your feelings and your voice !</string>
    <string name="slide_2_title">Station</string>
    <string name="slide_2_desc">Hear the Lifes of others and enjoy it !</string>
    <string name="slide_3_title">Search in Geyhan !</string>
    <string name="slide_3_desc">Find your friends and  listen to their voices</string>
    <string name="slide_4_title">Gift for God</string>
    <string name="slide_4_desc">Let be different and enjoy !</string>
    <string name="change_country">My selected country is wrong!</string>
    <string name="def_number" translatable="false">9012345678</string>
    <string name="app_icon">app Icon</string>
    <string name="good_time">Good time !</string>
    <string name="mic">Mic</string>
    <string name="whats_up">whats Up?</string>
    <string name="strawberry">Strawberry…</string>
    <string name="upload_image">Upload image</string>
    <string name="title_activity_post" translatable="false">postActivity</string>
    <string name="post">Post</string>
    <string name="help">Help</string>
    <string name="athena_help_text">آتینا یک رباته که ما تازه شروع به توسعه دادنش کردیم؛ \nمیتونی به آتینا یاد بدی با تو حرف بزنه فقط کافیه بهش بگی "یاد بگیر"\nبیا و کمک کن آتینا بزرگ بشه بزودی امکانات مختلفی بهش اضافه میکنیم.\nمیتونی با #پیشنهاد پست بگزاری و به ما بگی دوست داری آتینا چه امکاناتی داشته باشه :-)\n</string>
    <string name="about">About</string>
    <string name="username">Username</string>
    <string name="copied">Copied</string>
    <string name="ok">OK</string>
    <string name="save_draft">Save as drafts</string>
    <string name="bio">Bio</string>
    <string name="following">Following</string>
    <string name="_0" translatable="false">0</string>
    <string name="followers">Followers</string>
    <string name="posts">Posts</string>
    <string name="likes">Likes</string>
    <string name="upload_video">Upload Video</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_ok">OK</string>
    <string name="label_select_video">Select Video</string>
    <string name="permission_title_rationale">Permission needed</string>
    <string name="permission_read_storage_rationale">Storage read permission is needed to pick files.</string>
    <string name="toast_cannot_retrieve_selected_video">Cannot retrieve selected video</string>
    <string name="pick_a_video">Select or record a a video below to try it out:</string>
    <string name="permission_denied">Permission denied</string>
    <string name="brightness">brightness:</string>
    <string name="volume">volume:</string>
    <string name="loading">loading…</string>
    <string name="pause">pause</string>
    <string name="video">Video</string>
    <string name="player">Player</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="create_account">Create Account</string>
    <string name="already_a_member_login">Already a member? Login</string>
    <string name="icon">Icon</string>
    <string name="no_account_yet_create_one">No account yet? Create one</string>
    <string name="no_account"><![CDATA[No account exist with this username & password]]></string>
    <string name="at_least">at least 4 characters till 20 characters</string>
    <string name="between_characters">between 4 and 10 alphanumeric characters</string>
    <string name="invalid_username">Sorry, this username is invalid you can use a–z 0–9 _</string>
    <string name="phone_pattern">10 digits without zero</string>
    <string name="see_your_drafts">See your drafts!</string>
    <string name="now">Now</string>
    <string name="sec">Sec</string>
    <string name="min">Min</string>
    <string name="hour">Hour</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="signup">Sign Up</string>
    <string name="login">Login</string>
</resources>