<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
z
    <TextView
        android:id="@+id/hi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="85dp"
        android:text="@string/sayNew"
        android:textAlignment="center"
        android:textSize="36sp" />
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rlt_share"
        android:layout_below="@+id/imageView1" android:layout_alignStart="@+id/imageView1"
        android:layout_alignEnd="@+id/imageView1">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_alignParentTop="true" android:layout_centerHorizontal="true"
            android:text="@string/version" />


    </RelativeLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/present"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="25sp"
        android:textAlignment="center"
        android:layout_marginBottom="45dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/app_icon"
        app:srcCompat="@mipmap/ic_launcher" />


</RelativeLayout>