<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/countryname"
            android:layout_width="wrap_content"
            android:layout_height="?attr/actionBarSize"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:background="@color/colorPrimaryDark"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/cyc"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="?attr/actionBarSize"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/countryname"
            android:layout_margin="5dp"
            android:layout_toStartOf="@+id/space"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/login"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:visibility="invisible" />

        <Space
            android:id="@+id/space"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/signup"
            android:layout_width="wrap_content"
            android:layout_height="?attr/actionBarSize"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/countryname"
            android:layout_margin="5dp"
            android:layout_toEndOf="@+id/space"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/signup"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:visibility="invisible" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/yuo"
            android:id="@+id/policiesAccept"
            android:textColor="@android:color/tertiary_text_light"
            android:layout_above="@+id/banner_ad_view"
            android:gravity="center_vertical|center_horizontal"
            android:textAlignment="center" />

    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>