<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="37dp"
            android:textSize="20sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/txtOutput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtInput"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="92dp"
            android:text="@string/good_time"
            android:textSize="26sp"
            android:textStyle="normal" />

        <ImageButton
            android:id="@+id/btnSpeak"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="74dp"
            android:background="@null"
            android:contentDescription="@string/mic"
            android:cropToPadding="false"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_mic_none_black" />

        <ImageButton
            android:id="@+id/imgHelp"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="5dp"
            android:background="@null"
            android:contentDescription="@string/help"
            android:src="@drawable/ic_help_black" />


    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>